Moved common configurations to root project